related products is not showing correctly

--- a/less/_components.lightbox.less
+++ b/less/_components.lightbox.less
@@ -4,7 +4,7 @@
 	position: relative;
 }
 
-.slideshow, .sp-wrap{
+.slideshow{
 	width: 100%;
 	display: block !important;
 	margin: 0 auto !important;
@@ -14,9 +14,14 @@
 	position: relative;
 }
 
-.slideshow img, .sp-wrap img{
+.slideshow img{
 	max-width: 100%; height: auto;
 	padding: 0; margin: 0;
+}
+
+.slideshow .single-image{
+	display: block;
+	margin: 0 auto;
 }
 
 .sp-large{
